tests/compile_fail/unused_import.olrn
# both imports are unused — compilation must FAIL with 2 errors
@import (
    std = @std,
    mk  = @std.gdev,
)

fn main() -> void
{
    @pl("never uses std or mk")
}
